--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -50,7 +50,7 @@ jobs:
             }
 
             for (const issueNumber of issueNumbers) {
-              console.log(Assigning issue #${issueNumber} to @${assignee});
+              console.log(`Assigning issue #${issueNumber} to @${assignee}`);
               try {
                 await github.rest.issues.addAssignees({
                   owner,
@@ -58,8 +58,8 @@ jobs:
                   issue_number: issueNumber,
                   assignees: [assignee]
                 });
-                console.log(Successfully assigned issue #${issueNumber} to @${assignee});
+                console.log(`Successfully assigned issue #${issueNumber} to @${assignee}`);
               } catch (error) {
-                console.log(Failed to assign issue #${issueNumber}: ${error.message});
+                console.log(`Failed to assign issue #${issueNumber}: ${error.message}`);
               }
             }
