--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,3 +1,5 @@
+name: Auto-assign issues from PR
+
 on:
   pull_request:
     types: [opened]
@@ -43,7 +45,7 @@ jobs:
                 }
               }
             }
-
+            
             if (issueNumbers.size === 0) {
               console.log('No linked issues found in PR body or commit messages.');
               return;
