final test i think so

--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,3 +1,5 @@
+name: Auto-assign issues from PR
+
 on:
   pull_request:
     types: [opened]
@@ -30,8 +32,8 @@ jobs:
             }
 
             const { data: commits } = await github.rest.pulls.listCommits({
-              owner,
-              repo,
+              owner: owner,
+              repo: repo,
               pull_number: prNumber,
             });
 
@@ -43,7 +45,7 @@ jobs:
                 }
               }
             }
-
+            
             if (issueNumbers.size === 0) {
               console.log('No linked issues found in PR body or commit messages.');
               return;
@@ -53,10 +55,10 @@ jobs:
               console.log(`Assigning issue #${issueNumber} to @${assignee}`);
               try {
                 await github.rest.issues.addAssignees({
-                  owner,
-                  repo,
+                  owner: owner,
+                  repo: repo,
                   issue_number: issueNumber,
-                  assignees: [assignee]
+                  assignees: [assignee],
                 });
                 console.log(`Successfully assigned issue #${issueNumber} to @${assignee}`);
               } catch (error) {
