--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,4 +1,4 @@
-name: Auto-assign issues from PR
+name: Auto-assign or comment on issues
 
 on:
   pull_request_target:
@@ -9,10 +9,10 @@ permissions:
   pull-requests: read
 
 jobs:
-  assign-issue:
+  assign-or-comment:
     runs-on: ubuntu-latest
     steps:
-      - name: Extract issue number from PR body and commits, then assign
+      - name: Attempt to assign issue, comment on failure
         uses: actions/github-script@v7
         with:
           script: |
@@ -20,6 +20,7 @@ jobs:
             const repo = context.repo.repo;
             const prNumber = context.payload.pull_request.number;
             const assignee = context.payload.pull_request.user.login;
+            const prUrl = context.payload.pull_request.html_url;
 
             const issueNumbers = new Set();
             const pattern = /(?:closes|fixes|resolves)\s+#(\d+)/gi;
@@ -47,13 +48,13 @@ jobs:
             }
             
             if (issueNumbers.size === 0) {
-              console.log('No linked issues found in PR body or commit messages.');
+              console.log('No linked issues found.');
               return;
             }
 
             for (const issueNumber of issueNumbers) {
-              console.log(`Assigning issue #${issueNumber} to @${assignee}`);
               try {
+                console.log(`Attempting to assign issue #${issueNumber} to @${assignee}`);
                 await github.rest.issues.addAssignees({
                   owner: owner,
                   repo: repo,
@@ -61,7 +62,18 @@ jobs:
                   assignees: [assignee],
                 });
                 console.log(`Successfully assigned issue #${issueNumber} to @${assignee}`);
+
               } catch (error) {
-                console.log(`Failed to assign issue #${issueNumber}: ${error.message}`);
+                console.log(`Could not assign issue #${issueNumber}. Defaulting to a comment. Error: ${error.message}`);
+                
+                const commentBody = `**Issue claimed!**\n\nContributor @${assignee} has opened a pull request that addresses this issue: ${prUrl}\n\nThis issue could not be assigned automatically. To avoid duplicate work, please check the PR before starting.`;
+                
+                await github.rest.issues.createComment({
+                  owner: owner,
+                  repo: repo,
+                  issue_number: issueNumber,
+                  body: commentBody,
+                });
+                console.log(`Successfully commented on issue #${issueNumber} as a fallback.`);
               }
             }
