--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,7 +1,7 @@
-name: Auto-assign or comment on issues
+name: Auto-claim issues from PR
 
 on:
-  pull_request_target:
+  pull_request:
     types: [opened]
 
 permissions:
@@ -9,17 +9,17 @@ permissions:
   pull-requests: read
 
 jobs:
-  assign-or-comment:
+  claim-issue:
     runs-on: ubuntu-latest
     steps:
-      - name: Attempt to assign issue, comment on failure
+      - name: Comment on linked issues
         uses: actions/github-script@v7
         with:
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const prNumber = context.payload.pull_request.number;
-            const assignee = context.payload.pull_request.user.login;
+            const user = context.payload.pull_request.user.login;
             const prUrl = context.payload.pull_request.html_url;
 
             const issueNumbers = new Set();
@@ -48,32 +48,23 @@ jobs:
             }
             
             if (issueNumbers.size === 0) {
-              console.log('No linked issues found.');
+              console.log('No linked issues found in PR body or commit messages.');
               return;
             }
 
-            for (const issueNumber of issueNumbers) {
-              try {
-                console.log(`Attempting to assign issue #${issueNumber} to @${assignee}`);
-                await github.rest.issues.addAssignees({
-                  owner: owner,
-                  repo: repo,
-                  issue_number: issueNumber,
-                  assignees: [assignee],
-                });
-                console.log(`Successfully assigned issue #${issueNumber} to @${assignee}`);
+            const commentBody = `**Issue claimed!**\n\nContributor @${user} has opened a pull request that addresses this issue: ${prUrl}\n\nTo avoid duplicate work, please check the PR before starting.`;
 
-              } catch (error) {
-                console.log(`Could not assign issue #${issueNumber}. Defaulting to a comment. Error: ${error.message}`);
-                
-                const commentBody = `**Issue claimed!**\n\nContributor @${assignee} has opened a pull request that addresses this issue: ${prUrl}\n\nThis issue could not be assigned automatically. To avoid duplicate work, please check the PR before starting.`;
-                
+            for (const issueNumber of issueNumbers) {
+              console.log(`Adding comment to issue #${issueNumber}`);
+              try {
                 await github.rest.issues.createComment({
                   owner: owner,
                   repo: repo,
                   issue_number: issueNumber,
                   body: commentBody,
                 });
-                console.log(`Successfully commented on issue #${issueNumber} as a fallback.`);
+                console.log(`Successfully commented on issue #${issueNumber}`);
+              } catch (error) {
+                console.log(`Failed to comment on issue #${issueNumber}: ${error.message}`);
               }
             }
