--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,4 +1,4 @@
-name: Auto-assign issues from PR
+name: Auto-comment on issues from PR
 
 on:
   pull_request_target:
@@ -9,21 +9,22 @@ permissions:
   pull-requests: read
 
 jobs:
-  assign-issue:
+  comment-on-issue:
     runs-on: ubuntu-latest
     steps:
-      - name: Extract issue number from PR body and commits, then assign
+      - name: Comment on linked issue
         uses: actions/github-script@v7
         with:
-          token: ${{ secrets.Assign_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
-            const prNumber = context.payload.pull_request.number;
-            const assignee = context.payload.pull_request.user.login;
+            const prAuthor = context.payload.pull_request.user.login;
+            const prLink = context.payload.pull_request.html_url;
 
-            const issueNumbers = new Set();
+            // Regex to find keywords like "fixes #123"
             const pattern = /(?:closes|fixes|resolves)\s+#(\d+)/gi;
+            const issueNumbers = new Set();
 
             const prBody = context.payload.pull_request.body;
             if (prBody) {
@@ -32,37 +33,24 @@ jobs:
               }
             }
 
-            const { data: commits } = await github.rest.pulls.listCommits({
-              owner: owner,
-              repo: repo,
-              pull_number: prNumber,
-            });
-
-            for (const commit of commits) {
-              const commitMessage = commit.commit.message;
-              if (commitMessage) {
-                for (const match of commitMessage.matchAll(pattern)) {
-                  issueNumbers.add(match[1]);
-                }
-              }
-            }
-            
             if (issueNumbers.size === 0) {
-              console.log('No linked issues found in PR body or commit messages.');
+              console.log('No linked issues found in PR body.');
               return;
             }
-
+            
             for (const issueNumber of issueNumbers) {
-              console.log(`Assigning issue #${issueNumber} to @${assignee}`);
+              // This action will now run for EVERYONE, collaborators and non-collaborators alike.
+              console.log(`Commenting on issue #${issueNumber} to acknowledge PR from @${prAuthor}.`);
               try {
-                await github.rest.issues.addAssignees({
-                  owner: owner,
-                  repo: repo,
+                const commentBody = `Work on this issue has started!  \n\nContributor @${prAuthor} has opened pull request ${prLink} to address it.`;
+                await github.rest.issues.createComment({
+                  owner,
+                  repo,
                   issue_number: issueNumber,
-                  assignees: [assignee],
+                  body: commentBody,
                 });
-                console.log(`Successfully assigned issue #${issueNumber} to @${assignee}`);
+                console.log(`Successfully commented on issue #${issueNumber}`);
               } catch (error) {
-                console.log(`Failed to assign issue #${issueNumber}: ${error.message}`);
+                console.log(`Failed to comment on issue #${issueNumber}: ${error.message}`);
               }
             }
