will also run if we edit description

--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -2,7 +2,7 @@ name: Auto-comment on issues from PR
 
 on:
   pull_request_target:
-    types: [opened]
+    types: [opened, edited]
 
 permissions:
   issues: write
