--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -87,7 +87,7 @@ jobs:
                   continue;
                 }
 
-                const commentBody = `**Issue Claimed**\n\nThis issue has been claimed by @${prAuthor} via pull request ${prLink}.\n\n**Note for other contributors:**\nTo avoid duplicate effort, please coordinate with the contributor or a project maintainer before submitting a new pull request for this issue.`;
+                const commentBody = `**Issue Claimed**\n\nThis issue has been claimed by @${prAuthor} via pull request ${prLink}.\n\n**Note for other contributors:**\n\nTo avoid duplicate effort, please coordinate with the contributor or a project maintainer before submitting a new pull request for this issue.`;
 
                 await github.rest.issues.createComment({
                   owner, repo, issue_number: issueNumber, body: commentBody,
